Fix card width on small defices and form spacing

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   @apply flex items-center rounded-full border border-gray-light p-2 px-4 text-center text-xs font-bold  text-gray-darker shadow-sm hover:border-gray-dark hover:text-gray-dark;
 }
 .form {
-  @apply mx-auto w-full max-w-[400px] bg-white p-4 sm:p-2 sm:text-left;
+  @apply mx-auto w-full max-w-[400px] bg-white p-2 sm:p-2 sm:text-left;
 }
 .signin-text {
   @apply mr-1 py-2 text-sm text-gray-dark;
